<resources>
    <string name="app_name">Моя Погода</string>
    <string name="butt_show_wheather">Показать погоду</string>
    <string name="select_city">Выберете город</string>
    <string name="weather_cast">Прогноз погоды</string>
    <string name="button_send_text">Поделись погодой</string>
    <string name="for_who_textedit">Кому отправить</string>
    <string name="back_btn_text">Вернись домой</string>
    <string name="error">Нет подходящих Активити</string>
    <string name="dialog_warning">Внимание</string>
    <string name="dialog_text">Нет подходящего для запуска приложения</string>
    <string name="wind">ветер</string>
    <string name="barometer">давление</string>
    <string name="humidyti">влажность</string>
    <string name="temperature_symb">°С</string>
    <string name="wind_symb">м/с</string>
    <string name="barometer_symb">мм рт.ст.</string>
    <string name="wind_text">Ветер</string>
    <string name="Barrometer_text">Давление</string>
    <string name="humydity_text">Влажность</string>

    <string-array name="city_list">Список городов>
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Новосибирск</item>
        <item>Екатеринбург</item>
        <item>Нижний Новгород</item>
    </string-array>

    <string-array name="weather_list">
        <item>+14 Облачно</item>
        <item>+18 Преимущественно ясно</item>
        <item>+23 Ясно</item>
        <item>+13 Облачно и временами осадки</item>
        <item>+16 Частично облачно</item>
    </string-array>

</resources>
