<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <TextView
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_city"
        android:textSize="20sp"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Spinner
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:layout_marginTop="40dp"
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/city_list"
        android:gravity="center"
        android:layout_gravity="center"/>


    <Switch
        android:layout_marginTop="40dp"
        android:id="@+id/switch_wind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wind_text"
        android:textSize="20sp"/>

    <Switch
        android:layout_marginTop="10dp"
        android:id="@+id/switch_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Barrometer_text"
        android:textSize="20sp"/>

    <Switch
        android:layout_marginTop="10dp"
        android:id="@+id/switch_hum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/humydity_text"
        android:textSize="20sp"/>

    <Button
        android:layout_marginTop="40dp"
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/butt_show_wheather"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/result_text"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    </LinearLayout>

</ScrollView>